objects/Ship_To__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation_Amount__c</fullName>
        <label>Accommodation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the system has determined the correct Business or Person Account record to which this Ship To should be linked. Editable by those with the Data Stewardship Permission Set only. Other users can create Stewardship Requests if Ship Tos are linked to the incorrect Business or Person Account record.</description>
        <label>Account Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Sold_To__c</fullName>
        <formula>Order__r.Account_Sold_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sold To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_1__c</fullName>
        <description>Roll Up of all the Additional Charge Amounts from the Additional Charges object if amount is  &gt; 0</description>
        <label>Additional Charge</label>
        <summarizedField>Additional_Charge__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Additional_Charge__c.Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Additional_Charge__c.Ship_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Code__c</fullName>
        <label>Additional Charge Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Credit_Code__c</fullName>
        <label>Additional Charge Credit Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Credit_Description__c</fullName>
        <label>Additional Charge Credit Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Credited_1__c</fullName>
        <label>Additional Charge Credited</label>
        <summarizedField>Additional_Charge__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Additional_Charge__c.Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Additional_Charge__c.Ship_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Credited__c</fullName>
        <label>Additional Charge Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Description__c</fullName>
        <label>Additional Charge Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charge__c</fullName>
        <label>Additional Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Freight_Code__c</fullName>
        <label>Additional Freight Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Freight_Description__c</fullName>
        <label>Additional Freight Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Freight__c</fullName>
        <label>Additional Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Ship To</label>
        <referenceTo>Contact_Address__c</referenceTo>
        <relationshipLabel>Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Customer_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW Customer Ship To</label>
        <referenceTo>Source_System_View__c</referenceTo>
        <relationshipLabel>Ship Tos (CW Customer Ship To)</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CW_Customer_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW Customer Sold To</label>
        <referenceTo>Source_System_View__c</referenceTo>
        <relationshipLabel>Ship Tos (CW Customer Sold Tos)</relationshipLabel>
        <relationshipName>Sold_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CW_Upload_DateTime__c</fullName>
        <label>CW Upload Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the system has determined the correct Business Contact or Person Account record to which this Ship To should be linked.</description>
        <label>Contact Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Sold_To__c</fullName>
        <formula>Order__r.Contact_Sold_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Sold To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the Account record has been completed. For Person Accounts, this field will be updated with the Customer Address record associated to this Ship To.</description>
        <label>Customer Address Ship To</label>
        <referenceTo>Customer_Address__c</referenceTo>
        <relationshipLabel>Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DA_Ship_To_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Ship To Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXT_OrderShipTo_Number__c</fullName>
        <externalId>true</externalId>
        <label>EXT OrderShipTo Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handling_Charges__c</fullName>
        <label>Handling Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Subtotal__c</fullName>
        <label>Merchandise Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Ship_to_Last_Name__c + &quot;, &quot; +  Ship_to_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Company__c</fullName>
        <label>New Company</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Address_1__c</fullName>
        <label>New Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Address_2__c</fullName>
        <label>New Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_City__c</fullName>
        <label>New City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Country__c</fullName>
        <label>New Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Day_Phone__c</fullName>
        <label>New Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Email__c</fullName>
        <label>New Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_First_Name__c</fullName>
        <label>New First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Last_Name__c</fullName>
        <label>New Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Night_Phone__c</fullName>
        <label>New Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_State__c</fullName>
        <label>New State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Zip__c</fullName>
        <label>New Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Amount_for_Timeline__c</fullName>
        <formula>&quot;$&quot; + TEXT(Order__r.Total_Order_Amount__c) + IF(CONTAINS(RIGHT(TEXT(Order__r.Total_Order_Amount__c), 2), &quot;.&quot;), &quot;0&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Amount for Timeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Closed__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Order__r.Contact_Sold_To__r.Id != Contact_Ship_To__r.Id &amp;&amp;
ISPICKVAL(Order__r.Status__c, &quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Order__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Description__c</fullName>
        <label>Order Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_and_Amount__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Order__r.Name + &quot; - $&quot; + TEXT(Order__r.Total_Order_Amount__c) + IF(CONTAINS(RIGHT(TEXT(Order__r.Total_Order_Amount__c), 2), &quot;.&quot;), &quot;0&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number and Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Open__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Order__r.Contact_Sold_To__r.Id != Contact_Ship_To__r.Id &amp;&amp; 
ISPICKVAL(Order__r.Status__c, &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status_Other__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Order__r.Contact_Sold_To__r.Id != Contact_Ship_To__r.Id &amp;&amp; 
(!(ISPICKVAL(Order__r.Status__c, &quot;Open&quot;) || ISPICKVAL(Order__r.Status__c, &quot;Closed&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>TEXT(Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Ship Tos</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RH_Order_Number__c</fullName>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Address__c</fullName>
        <description>Field created to display Ship To address fields and to be used for field history tracking. Field will be updated with code.</description>
        <label>Ship To Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_1__c</fullName>
        <label>Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_2__c</fullName>
        <label>Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <formula>Ship_to_Address_1__c + BR() + Ship_to_Address_2__c + BR() + Ship_to_City__c + &quot;, &quot; +  Ship_to_State__c + &quot;, &quot; +  Ship_to_Zip__c + BR() +  Ship_to_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company__c</fullName>
        <label>Ship to Company</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Day_Phone__c</fullName>
        <label>Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_to_First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Night_Phone__c</fullName>
        <label>Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_to_Number__c</fullName>
        <description>This field is populated by information from CW. It is hidden from the page layout because the Ship to Number (standard name field) is required on the page layout, and this would in essence should duplicate information.</description>
        <label>Ship to Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ship To</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Description__c</field>
            <operation>contains</operation>
            <value>edmonton</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Order_num_greater_than</fullName>
        <columns>NAME</columns>
        <columns>RH_Order_Number__c</columns>
        <columns>EXT_OrderShipTo_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RH_Order_Number__c</field>
            <operation>greaterThan</operation>
            <value>211500</value>
        </filters>
        <label>Order num greater than 211500</label>
    </listViews>
    <nameField>
        <label>Ship To Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship Tos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Ship_To_Name</fullName>
        <active>true</active>
        <description>Ship To Name cannot be changed by anyone other than the System Administrator or the API Only user.</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name=&apos;System Administrator&apos;,$Profile.Name=&apos;API Only&apos;)), ISCHANGED(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Ship To Number cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>